--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <description>Multi-module Maven project for microservices-based e-commerce app</description>
     <modules>
         <module>commonlib</module>
+        <module>userservice</module>
     </modules>
 
     <dependencyManagement>
@@ -31,6 +32,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.ecom</groupId>
+                <artifactId>commonlib</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -40,6 +46,11 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
