--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <modules>
         <module>commonlib</module>
         <module>userservice</module>
+        <module>configserver</module>
+        <module>discoveryserver</module>
+<!--        <module></module>-->
     </modules>
 
     <dependencyManagement>
