--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
     context-path: /api/v1/users
 
 spring:
+  application:
+    name:UserService
   datasource:
     url: jdbc:postgresql://localhost:5432/test_db
     username: postgres
