--- a/commonlib/pom.xml
+++ b/commonlib/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>commonlib</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
