Added Jenkins fix in pom.xml part 2

--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -123,8 +123,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal> <!-- 👈 This creates executable JAR -->
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
